<resources>
    <string name="app_name">Ometria Sample</string>
    <string name="tab_one">TAB ONE</string>
    <string name="tab_two">TAB TWO</string>
    <string name="tab_three">TAB THREE</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="api_key">Ometria API key</string>
    <string name="api_key_hint">Get it from settings / app connection</string>
    <string name="api_key_save">Save</string>
    <string name="details_login_email">Emulate Login - email</string>
    <string name="details_login_email_login">Login</string>
    <string name="details_login_customer_id">Emulate Login - customer id</string>
    <string name="details_login_customer_id_login">Login</string>
</resources>