<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/detailsBTN"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="24dp"
        android:layout_marginStart="16dp"
        android:drawableEnd="@drawable/ic_arrow_right_alt_24px"
        android:drawablePadding="5dp"
        android:text="Details screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableKeyAndLogin" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventsRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <TableLayout
        android:id="@+id/tableKeyAndLogin"
        android:layout_width="398dp"
        android:layout_height="337dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_API_key"
                android:layout_width="398dp"
                android:layout_height="match_parent"
                android:text="@string/api_key" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <EditText
                android:id="@+id/input_API_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/api_key_hint"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_save_API_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/api_key_save" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_login_email" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_login_email_login" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_login_customer_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_login_customer_id" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_login_customer_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_login_customer_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_login_customer_id_login" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>